<resources>
    <string name="app_name">Smart Home Automation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Smart Home Automation</string>
    <string name="nav_header_subtitle">The only app you need</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="alert_title">Alert</string>
    <string name="alert_message">\"Are you sure you want to exit?\"</string>
    <string name="alert_positive_btn">Yes</string>
    <string name="alert_negative_btn">No</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="bedroom_fragment">Bedroom Fragment</string>
    <string name="kitchen_fragment">Kitchen Fragment</string>
    <string name="landing_fragment">Landing Fragment</string>
    <string name="living_room_fragment">Living Room Fragment</string>
    <string name="settings_fragment">Settings Fragment</string>
    <string name="main_drawer_t1">Home</string>
    <string name="main_drawer_t2">Bedroom</string>
    <string name="main_drawer_t3">Living Room</string>
    <string name="main_drawer_t4">Kitchen</string>
    <string name="nav_settings">Settings</string>
    <string name="setup_fragment">Setup Fragment</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="register_access_hint">Access Code</string>
    <string name="login_button_text">Log In</string>
    <string name="signup_btn_text">Sign Up</string>
    <string name="setting_button_txt">Log Out</string>
    <string name="setting_switch_mode">Lock Portrait View</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <string name="hello_world">Hello Square World!</string>
    <string name="kitchen">Kitchen</string>
    <string name="bedroom">Bedroom</string>
    <string name="living_room">Living Room</string>
    <string name="settings">Settings</string>
    <string name="bedroom_sensor_readings">Bedroom Sensor Readings</string>
    <string name="kitchen_sensor_readings">Kitchen Sensor Readings</string>
    <string name="living_room_sensor_readings">Living Room Sensor Readings</string>
    <string name="brightness_value">Brightness Value</string>
    <string name="colour_value">Colour Value</string>
    <string name="colour_value_livingroom">Colour Value</string>
    <string name="register_toast1">access code invalid</string>
    <string name="signup_success">Signup success</string>
    <string name="kitchen_data">Smoke: Negative\nLights: ON</string>
    <string name="bedroom_data">Temp: 21 degrees C\nHumidity: 30%\nLights: ON</string>
    <string name="living_room_data">Motion: Negative\nDoor: Closed\nRFID: Active\nLights: ON</string>
    <string name="home">Home</string>
    <string name="fragment2">Recent Tabs</string>
    <string name="fragment1">History</string>
    <string name="fragment3">item3</string>
    <string name="fragment4">About us</string>
    <string name="recent_tabs">Recent Tabs</string>
    <string name="history">History</string>
    <string name="feedback">Feedback</string>
    <string name="about_us">About Us</string>
    <string name="permission_granted">permission granted</string>
    <string name="permission_denied">permission denied</string>
    <string name="manage_access_card">Manage access card</string>
    <string name="choose_image">Choose Image</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="search">Search</string>
    <string name="logout">Logout</string>
    <string name="dont_have_an_account_sign_up">Dont have an account? Sign Up</string>
    <string name="already_have_an_account_log_in">Already have an account? Log In</string>
    <string name="legal">legal</string>
    <string name="review">Review</string>
    <string name="help">Help</string>
    <string name="exit">Exit</string>
    <string name="about_app">About app</string>
    <string name="report_an_issue">Report an issue</string>
    <string name="edit_room_name_and_type">Please add or edit room names and types below:\n\n</string>
    <string name="sign_in_with_google">Sign In With Google</string>
    <string name="version1_0">Version1.0</string>
    <string name="invalid_access_code">Invalid Access Code</string>
    <string name="sign_up_with_google">Sign Up with Google</string>
    <string name="sign_up_toast">Please sign up first</string>
    <string name="email_error">Please type correct email</string>
    <string name="add_devices_to_rooms">Add devices to rooms below:</string>
    <string name="version1_0_copyright_2021">Version1.0  Copyright 2021</string>
    <string name="notifier">Notification</string>
    <string name="alarm_description">Alerts user of sensor status</string>
    <string name="who_we_are_we_are_a_home_automation_company_specializing_in_custom_smart_home_solutions_we_can_t_wait_to_be_part_of_your_project_reach_out_today_and_see_how_we_can_make_your_dreams_a_reality">Who We Are? We are a Home Automation Company Specializing in Custom Smart Home Solutions. We can\'t wait to be part of your project - reach out today and see how we can make your dreams a reality!</string>
    <string name="verybad">very bad</string>
    <string name="Needsomeimprovement">Need some improvement</string>
    <string name="Good">Good</string>
    <string name="Great">Great</string>
    <string name="AwesomeIlikedtheservice">Awesome, I liked the service</string>
    <string name="email">Email</string>
    <string name="type_here">Type here</string>
    <string name="describe_the_issue_in_detail">Describe the issue in detail</string>
    <string name="button">Button</string>
    <string name="we_hope_you_enjoyed_using_our_app">We hope you enjoyed using our app</string>
    <string name="tell_us_what_you_loved">Tell us what you loved</string>
    <string name="send_feedback">Send feedback</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone number</string>
    <string name="Email">Email</string>
    <string name="enter_card">Enter card number</string>
    <string name="alert_card">Enter Card</string>
    <string name="alert_text">OK</string>
    <string name="image_uploaded">Image Uploaded</string>
    <string name="img_failef">Image Upload failed</string>
    <string name="img_upload">Image Uploaded</string>
    <string name="img_upl">Image Upload failed</string>
    <string name="minimul_length">Minimum length should be 8</string>
    <string name="toast_login_check">Please check your credentials</string>
    <string name="Please_create_can_acc">Please Create an account</string>
    <string name="successlogin_toast">Successfully Logged In</string>
    <string name="wlcm_back">Welcome Back </string>
    <string name="pleasE_type_corrent_email">Please type correct email</string>
    <string name="minimum_length">Minimum length should be 8</string>
    <string name="enter_access">Please enter access code</string>
    <string name="user_already_Exist">User already exist</string>
    <string name="successful_signedup">Successfully Signed Up</string>
    <string name="already_signed_up">Already Signed Up, please log in</string>
    <string name="success">Successfully Signed Up</string>
    <string name="review_heading">Review</string>
    <string name="nameerror">Minimum 3 words</string>
    <string name="phonenoerror">Invalid</string>
    <string name="reportemail">email</string>
    <string name="report">report</string>
    <string name="reporttitle">Report an Issue</string>
    <string name="orientationSwitch">orientationSwitch</string>
    <string name="selected">selected</string>
    <string name="full_name">Full Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="phone_no">Phone No</string>
    <string name="enter_card_no">Enter card no</string>
    <string name="sensor_data"> Sensor Data Readings</string>
    <string name="submit">submit</string>
    <string name="internet_connected">Internet connected</string>
    <string name="internet_not_connected">Internet not connected</string>
    <string name="ok">Ok</string>
    <string name="no_sensors">No sensors in room</string>
    <string name="double_check_sensors">Please double check that the sensors are connected and try again later</string>
    <string name="no_sensors_found">No Sensors Found!</string>
    <string name="password_error_register">Minimum 8 characters with atleast 1 upper case, 1 lowercase, 1 special character and 1 number</string>
    <string name="password_error_r">Password doesn\'t match</string>
    <string name="check_connection">Please check your connection</string>
    <string name="login_error">Minimum 8 characters with atleast 1 upper case, 1 lowercase, 1 special character and 1 number</string>
    <string name="password_error">Password does not satisfy requirements</string>
    <string name="access_card_title">Manage Access Card</string>
    <string name="do_you_want_to_delete">Do you want to delete it?</string>
    <string name="access_card_exists">Access Card already exists</string>
    <string name="about_title">About App</string>
    <string name="connection_lost_no_data">Connection Lost, no data available</string>
    <string name="no_data_available">No Data Available</string>
    <string name="connected">connected</string>
    <string name="not_connected">not connected</string>
    <string name="terms_link">https://policies.google.com/terms?hl=en-US</string>
    <string name="privacy_link">https://policies.google.com/privacy?hl=en-US</string>
    <string name="source_code_link">https://github.com/naveenKumar5935/smartHomeAutomation.git</string>
    <string name="no_connection_to_sensors">No connection to sensors detected</string>
    <string name="access_card_scanned">Access Card Scanned</string>
    <string name="wrong_access_card_scanned">Wrong Access Card Scanned</string>
    <string name="device_manager_title">Detected Devices</string>
    <string name="select_room">Select Room</string>
    <string name="low_temp_warning">Low Temperature Warning!</string>
    <string name="high_temp_warning">High Temperature Warning!</string>
    <string name="smoke_detected">Smoke detected</string>
    <string name="humid_level_low">Humidity level very low</string>
    <string name="motion_detected">Motion Detected!</string>
    <string name="enter_valid_email">Enter valid Email Address</string>
    <string name="fill_in_report_box">Please fill in report text box</string>
    <string name="thank_you_for_sharing_concern">Thank you for sharing your concern</string>
    <string name="choose_rating">Please choose the rating</string>
    <string name="fill_in_name">Please fill in Name text box</string>
    <string name="fill_in_phone">Please fill in phone number text box</string>
    <string name="fill_in_feedback">Please fill in feedback box</string>
    <string name="loading">Loading...</string>
    <string name="progress_dialog">Progress Dialog</string>
    <string name="thanks_for_sharing_feedback">Thank you for sharing your feedback</string>
</resources>